--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,22 @@ body{
     padding: 0;
 }
 
+.container{
+    text-align: center;
+}
+
 iframe{
     width: 100%;
+}
+
+
+
+h1 {
+    color: white;
+}
+
+li{
+    list-style-type: none;
 }
 
 #noite{
@@ -48,6 +62,10 @@ iframe{
     background: linear-gradient(86deg,transparent 7%, rgb(0 0 0), transparent 91%);
     color: #fff;
 }
+.select2, .select2 a {
+    background: linear-gradient(86deg,transparent 7%, rgb(89 141 217), transparent 91%);
+    color: white;
+}
 
 
 .quadro { 
@@ -56,7 +74,6 @@ iframe{
     margin: auto;
     margin-top: 1%;
     width: 90%;
-    background-color: rgb(255, 255, 255);
     min-height: 80vh;
     border-radius: 20px;
 }
@@ -67,7 +84,7 @@ iframe{
     justify-content: space-around;
 }
 
-.bloco{
+.bloco, .bloco2{
     box-shadow: 1px 0 5px rgb(0 27 0), inset 0 0 100px rgb(155 197 218 / 25%);
     border: 8px double;
     width: 45%;
@@ -78,20 +95,28 @@ iframe{
 }
 
 .bloco2{
-    box-shadow: 1px 0 5px rgb(0 27 0), inset 0 0 100px rgb(155 197 218 / 25%);
-    border: 8px double;
-    width: 45%;
-    padding: 1%;
-    border-radius: 12px;
     background: linear-gradient(15deg, rgb(170, 221, 157), transparent);
+    color: #000;
+
 }
 
 img{
     width: 99%;
 }
 
-.local{
+.DesAva{
     justify-content: space-between;
     display: flex;
 }
 
+
+.auto {
+    text-align: center;
+    width: 35%;
+    margin: auto;
+}
+
+.list ,.list li{
+    text-align: left;
+    font-family: sans-serif;
+}
