--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,15 @@ iframe{
     width: 100%;
 }
 
+hr{
+    background: linear-gradient(10deg, transparent, rgb(255, 247, 0), transparent );
+    width: 100%;
+    height: 2px;
+    border: none;
+    margin-bottom: 3vh;
+}
 
-
-h1 {
+h1, h2 {
     color: white;
 }
 
@@ -25,12 +31,14 @@ li{
     background-image: url(../img/ceunoturno.jpg);
     background-size: cover;
 }
-
 #dia{
     background-image: url(../img/parque.jpg);
     background-size: cover;
 }
-
+#home{
+    background-image: url(../img/pordosol.jpg);
+    background-size: cover;
+}
 
 .logo{
     padding: 1%;
@@ -66,7 +74,10 @@ li{
     background: linear-gradient(86deg,transparent 7%, rgb(89 141 217), transparent 91%);
     color: white;
 }
-
+.select3, .select3 a {
+    background: linear-gradient(86deg,transparent 7%, rgb(255 0 0), transparent 91%);
+    color: white;
+}
 
 .quadro { 
     display: flex;
@@ -76,6 +87,11 @@ li{
     width: 90%;
     min-height: 80vh;
     border-radius: 20px;
+}
+.quadro2{
+    flex-direction: row;
+    justify-content: space-around;
+    display: flex;
 }
 
 .barra{
@@ -122,10 +138,37 @@ img{
 }
 
 .btn {
-    background: linear-gradient(90deg , transparent, rgb(255 0 0) , rgb(255 247 0)48%, rgb(255 0 0) 83%,transparent );
+    background: linear-gradient(90deg, transparent, rgb(255 0 0) , rgb(255 141 0)48%, rgb(255 0 0) 83%,transparent );
     padding: 3%;
     border-radius: 5px;
     border: none;
     color: #fff;
     font-weight: bold;
+}
+
+.coluna{
+    margin: 1%;
+    padding: 1%;
+    width: 45%;
+    min-height: 720px;
+}
+
+.box{
+    background: linear-gradient(45deg,#863131, transparent);
+    display: flex;
+    flex-direction: column;
+    border: 1px solid  rgb(255, 247, 0);
+    border-radius: 10px;
+    padding: 3%;
+}
+
+.campo{
+    display: block;
+    padding: 1vh;
+    width: -webkit-fill-available;
+}
+
+.input{
+    padding: 1%;
+    color: #fff;
 }
