--- a/css/style.css
+++ b/css/style.css
@@ -1,85 +1,93 @@
-body{
+body {
     margin: 0;
     padding: 0;
 }
 
-.container{
+.container {
     text-align: center;
 }
 
-iframe{
+iframe {
     width: 100%;
 }
 
-hr{
-    background: linear-gradient(10deg, transparent, rgb(255, 247, 0), transparent );
+hr {
+    background: linear-gradient(10deg, transparent, rgb(255, 247, 0), transparent);
     width: 100%;
     height: 2px;
     border: none;
     margin-bottom: 3vh;
 }
 
-h1, h2 {
-    color: white;
+h1,
+h2 {
+    color: rgba(239, 243, 12, 0.993)
 }
 
-li{
+li {
     list-style-type: none;
 }
 
-#noite{
+#noite {
     background-image: url(../img/ceunoturno.jpg);
     background-size: cover;
 }
-#dia{
+
+#dia {
     background-image: url(../img/parque.jpg);
     background-size: cover;
 }
-#home{
+
+#home {
     background-image: url(../img/pordosol.jpg);
     background-size: cover;
 }
 
-.logo{
+.logo {
     padding: 1%;
     font-size: x-large;
     text-align: center;
-    font-family:fangsong;
+    font-family: fangsong;
     color: #fff;
 }
-  
+
 .menu ul {
     margin: 0;
     text-align: center;
-    background:linear-gradient(90deg, transparent 12%, rgb(255 0 0) , rgb(255 247 0)48%, rgb(255 0 0) 72%,transparent 93% );
+    background: linear-gradient(90deg, transparent 12%, rgb(255 0 0), rgb(255 247 0)48%, rgb(255 0 0) 72%, transparent 93%);
 }
-  
+
 .menu ul li {
     display: inline-block;
 }
-  
+
 .menu ul li a {
     padding: 18px;
     font-family: "Open Sans";
-    text-transform:uppercase;
+    text-transform: uppercase;
     text-decoration: none;
     display: block;
 }
 
-.select, .select a{
-    background: linear-gradient(86deg,transparent 7%, rgb(0 0 0), transparent 91%);
+.select,
+.select a {
+    background: linear-gradient(86deg, transparent 7%, rgb(0 0 0), transparent 91%);
     color: #fff;
 }
-.select2, .select2 a {
-    background: linear-gradient(86deg,transparent 7%, rgb(89 141 217), transparent 91%);
-    color: white;
-}
-.select3, .select3 a {
-    background: linear-gradient(86deg,transparent 7%, rgb(255 0 0), transparent 91%);
+
+.select2,
+.select2 a {
+    background: linear-gradient(86deg, transparent 7%, rgb(89 141 217), transparent 91%);
     color: white;
 }
 
-.quadro { 
+.select3,
+.select3 a {
+    background: linear-gradient(86deg, transparent 7%, rgb(255 0 0), transparent 91%);
+    color: white;
+}
+
+.quadro {
     display: flex;
     flex-direction: column;
     margin: auto;
@@ -87,20 +95,23 @@ li{
     width: 90%;
     min-height: 80vh;
     border-radius: 20px;
+    color: #fff;
 }
-.quadro2{
+
+.quadro2 {
     flex-direction: row;
     justify-content: space-around;
     display: flex;
 }
 
-.barra{
+.barra {
     margin: 1%;
     display: flex;
     justify-content: space-around;
 }
 
-.bloco, .bloco2{
+.bloco,
+.bloco2 {
     box-shadow: 1px 0 5px rgb(0 27 0), inset 0 0 100px rgb(155 197 218 / 25%);
     border: 8px double;
     width: 45%;
@@ -110,17 +121,17 @@ li{
     color: #fff;
 }
 
-.bloco2{
+.bloco2 {
     background: linear-gradient(15deg, rgb(170, 221, 157), transparent);
     color: #000;
 
 }
 
-img{
+img {
     width: 99%;
 }
 
-.DesAva{
+.DesAva {
     justify-content: space-between;
     display: flex;
 }
@@ -132,13 +143,14 @@ img{
     margin: auto;
 }
 
-.list ,.list li{
+.list,
+.list li {
     text-align: left;
     font-family: sans-serif;
 }
 
 .btn {
-    background: linear-gradient(90deg, transparent, rgb(255 0 0) , rgb(255 141 0)48%, rgb(255 0 0) 83%,transparent );
+    background: linear-gradient(90deg, transparent, rgb(255 0 0), rgb(255 141 0)48%, rgb(255 0 0) 83%, transparent);
     padding: 3%;
     border-radius: 5px;
     border: none;
@@ -146,29 +158,38 @@ img{
     font-weight: bold;
 }
 
-.coluna{
+.coluna {
     margin: 1%;
     padding: 1%;
     width: 45%;
     min-height: 720px;
 }
 
-.box{
-    background: linear-gradient(45deg,#863131, transparent);
+.box {
+    background: linear-gradient(45deg, rgb(134, 50, 50), transparent);
     display: flex;
     flex-direction: column;
-    border: 1px solid  rgb(255, 247, 0);
+    border: 1px solid rgb(255, 247, 0);
     border-radius: 10px;
     padding: 3%;
 }
 
-.campo{
+.campo {
     display: block;
     padding: 1vh;
     width: -webkit-fill-available;
 }
 
-.input{
+.input {
     padding: 1%;
     color: #fff;
+}
+
+footer {
+    height:5%;
+    width: auto;
+    text-align: center;
+    background: linear-gradient(rgb(134, 50, 50), transparent);
+    display: flex;
+    flex-direction: column;
 }
