--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+body{
     margin: 0;
     padding: 0;
 }
@@ -28,6 +28,7 @@ li {
     list-style-type: none;
 }
 
+/*background*/
 #noite {
     background-image: url(../img/background/ceunoturno.jpg);
     background-size: cover;
@@ -49,6 +50,7 @@ li {
     justify-content: center;
     align-items: center;
 }
+/*  fim background*/
 
 .logo {
     padding: 1%;
@@ -57,6 +59,8 @@ li {
     font-family: fangsong;
     color: #fff;
 }
+
+/*Menu*/
 
 .menu ul {
     margin: 0;
@@ -93,7 +97,9 @@ li {
     background: linear-gradient(86deg, transparent 7%, rgb(255 0 0), transparent 91%);
     color: white;
 }
+/* fim menu*/
 
+/*espaçamento do corpo*/
 .quadro {
     display: flex;
     flex-direction: column;
@@ -110,13 +116,17 @@ li {
     justify-content: space-around;
     display: flex;
 }
+/*fim espaçamento do corpo*/
 
+/*alinhamento vertical dos blocos*/
 .barra {
     margin: 1%;
     display: flex;
     justify-content: space-around;
 }
 
+
+/* formatação dos blocos de conteudo*/
 .bloco,
 .bloco2 {
     box-shadow: 1px 0 5px rgb(0 27 0), inset 0 0 100px rgb(155 197 218 / 25%);
@@ -138,24 +148,25 @@ img {
     width: 99%;
 }
 
+/* alinhamento vertical do conteudo*/
 .DesAva {
     justify-content: space-between;
     display: flex;
 }
 
-
+/* centralização do conteudo*/
 .auto {
     text-align: center;
     width: 85%;
     margin: auto;
 }
-
+/*formatação de lista*/
 .list,
 .list li {
     text-align: left;
     font-family: sans-serif;
 }
-
+/*botoes*/
 .btn {
     background: linear-gradient(90deg, transparent, rgb(255 0 0), rgb(255 141 0)48%, rgb(255 0 0) 83%, transparent);
     padding: 3%;
@@ -163,8 +174,16 @@ img {
     border: none;
     color: #fff;
     font-weight: bold;
+    margin: auto;
 }
 
+.textBtn {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+/* medidas das colunas em login/cadastro*/
 .coluna {
     margin: 1%;
     padding: 1%;
@@ -172,6 +191,7 @@ img {
     min-height: 720px;
 }
 
+/*caixas de login/cadastro*/
 .box {
     background: linear-gradient(45deg, rgb(134, 50, 50), transparent);
     display: flex;
@@ -181,6 +201,7 @@ img {
     padding: 3%;
 }
 
+/* inputs de login/cadastro*/
 .campo {
     display: block;
     padding: 1vh;
@@ -192,6 +213,7 @@ img {
     color: #fff;
 }
 
+/*rodapés*/
 .rodape2 {
     background: linear-gradient(rgb(134, 50, 50), transparent);
     width: auto;
@@ -211,3 +233,4 @@ img {
     text-align: center;
     padding: 0.1%;
 }
+
