--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-
-body{
-    margin: 0;
+body {
+    margin: 0 auto;
+    padding: 0;
 }
 
 .container {
@@ -45,11 +45,12 @@ li {
 }
 
 #home {
-    background-image: url(../img/background/pordosol.jpg);
+    background-image: url(../img/background/imagem01.jpg);
     background-size: cover;
     justify-content: center;
     align-items: center;
 }
+
 /*  fim background*/
 
 .logo {
@@ -97,6 +98,7 @@ li {
     background: linear-gradient(86deg, transparent 7%, rgb(255 0 0), transparent 91%);
     color: white;
 }
+
 /* fim menu*/
 
 /*espaçamento do corpo*/
@@ -108,7 +110,7 @@ li {
     width: 90%;
     min-height: 80vh;
     border-radius: 20px;
-    color: #fff;
+    color: #000;
 }
 
 .quadro2 {
@@ -116,6 +118,7 @@ li {
     justify-content: space-around;
     display: flex;
 }
+
 /*fim espaçamento do corpo*/
 
 /*alinhamento vertical dos blocos*/
@@ -160,12 +163,14 @@ img {
     width: 85%;
     margin: auto;
 }
+
 /*formatação de lista*/
 .list,
 .list li {
     text-align: left;
     font-family: sans-serif;
 }
+
 /*botoes*/
 .btn {
     background: linear-gradient(90deg, transparent, rgb(255 0 0), rgb(255 141 0)48%, rgb(255 0 0) 83%, transparent);
@@ -215,43 +220,43 @@ img {
 
 /*rodapés*/
 .rodape2 {
-    background: linear-gradient(rgb(134, 50, 50), transparent);
+    background: linear-gradient(rgb(255, 217, 93), transparent);
     width: auto;
     text-align: center;
-    padding: 0.5%;
+    padding: 0.1%;
 }
 
 .rodape {
     width: auto;
     text-align: center;
     background: linear-gradient(hsl(108, 48%, 74%), transparent);
-    padding: 0.5%;
+    padding: 0.1%;
 }
 
 .rodape1 {
     background: linear-gradient(rgb(7, 7, 7), transparent);
     width: auto;
     text-align: center;
-    padding: 0.5%;
+    padding: 0.1%;
 }
 
 .container1 {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding-bottom: 25%;
+    margin: auto;
+    padding-bottom: 28%;
     width: 60%;
     overflow: hidden;
     position: relative;
-    width: 60%;
+    display: block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .photoWrapper {
     position: absolute;
     animation: round 16s infinite;
     opacity: 0;
-    bottom: 10ex;
-    padding-bottom: 5%;
+    bottom: 10vw;
 }
 
 .photo {
@@ -285,10 +290,9 @@ img {
     animation-delay: 12s;
 }
 
-@media (max-width: 1080px) {
+@media (max-width: 728px) {
     .container {
-      width: 99%;
-      padding-bottom: 50%;
+        width: 90%;
+        padding-bottom: 50%;
     }
-  }
-
+}
