ajuste no slider

--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,6 @@ img {
     position: absolute;
     animation: round 16s infinite;
     opacity: 0;
-    bottom: 10vw;
 }
 
 .photo {
@@ -321,5 +320,5 @@ img {
         width: 90%;
         padding-bottom: 50%;
     }
-
+}
 /*fim slider*/
