ajuste login e imagens

--- a/css/style.css
+++ b/css/style.css
@@ -120,12 +120,16 @@ img {
     min-height: 80vh;
     border-radius: 20px;
     color: #000;
+    padding: 15px;
 }
 
 .quadro2 {
     flex-direction: row;
     justify-content: space-around;
     display: flex;
+}
+.quadro2 h3{
+    font-size: 22px;
 }
 
 /*fim espaçamento do corpo*/
@@ -337,12 +341,12 @@ img {
 
 /*pagina quem somos*/
 .panaceia img {
-    width: 10%;
-    height: 10%;
-    display: block;
+    width: 15%;
+    height: 15%;
 }
 .panaceia{
     display: flex;
+    justify-content: center;
     margin: auto;
     width: 100%;
 }
